@@ -1063,6 +1063,7 @@ typedef struct _pSLang_Token_Type
 #define SLTOKEN_TYPE_INTEGER		0x100
 #define SLTOKEN_TYPE_FLOAT		0x200
 #define SLTOKEN_TYPE_NUMBER		(SLTOKEN_TYPE_INTEGER|SLTOKEN_TYPE_FLOAT)
+#define SLTOKEN_VALUE_IS_RESERVED	0x400
    int flags;
 
 #if SLANG_HAS_DEBUG_CODE
